--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
-theme: jekyll-theme-leap-day
+title: DF Wiki
+exclude:
+- .github
+- Gemfile
+- Gemfile.lock
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
