--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: ruby/setup-ruby@v1.99.0
         with:
           bundler-cache: true
+          ruby-version: 3.1.0
       - run: JEKYLL_ENV=production bundle exec jekyll build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
