--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,5 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DIAMONDFIREWIKI }}'
+          channelId: live
           projectId: diamondfirewiki
